# School-MMF-Practice-A

./: .breakpoints  .replit  00_MMF_base_v1.py  01_name_check.py  MMF_base_00_v1.py  MMF_base_00_v2.py  MMF_base_00_v4.py  MMF_base_00_v5.py  MMF_base_00_v5a.py  MMF_base_00_v5b.py  MMF_base_00_v6.py  MMF_base_00_v7.py  MMF_base_00_v9.py  README.md  age_check_03_v1.py  functions.py  instructions_v1.py  main.py  name_check_01.py  name_check_01_v2.py  pyproject.toml  snack_lists_expt_10_v1.py  snack_summary.csv  string_check_06_v3.py  surcharge_08b_v1a.py  surcharge_08b_v1b.py  surcharge_int_test.py  ticket_details.csv  ticket_loop_02.py  ticket_loop_02_v2.py  ticket_loop_02_v3.py  ticket_price_04_v1.py  ticket_snacks_08a_v1a.py  yesno_05_v1.py  yesno_05_v2.py  yesno_05_v3.py
Old Individual Testing Files/: MMF_base_00_v1.py  MMF_base_00_v2.py  MMF_base_00_v3.py  MMF_base_00_v3a.py  MMF_base_00_v8.py  age_check_03_v1.py  age_check_03_v2.py  instructions_v1.py  name_check_01_v1.py  name_check_01_v2.py  snack_lists_expt_08_v1a.py  snack_lists_expt_08_v1b.py  snack_lists_expt_08_v1c.py  string_analyzer_07_v1.py  string_check_06_v2.py  string_check_06_v3.py  string_check_06_v4.py  string_check_06_v5.py  string_check_06_v6a.py  string_check_06_v6b.py  string_check_06_v7a.py  string_check_06_v7b.py  string_learning.py  ticket_loop_02_v2.py  ticket_loop_02_v3.py  ticket_price_04_v1.py  ticket_price_04_v1_old.py  ticket_snacks_08a_v1a.py  yesno_05_v2.py  yesno_05_v3_old.py
